--- a/AppPallet.Android/AppPallet.Android.csproj
+++ b/AppPallet.Android/AppPallet.Android.csproj
@@ -94,6 +94,7 @@
   <ItemGroup>
     <Compile Include="CustomDatePickerRenderer .cs" />
     <Compile Include="CustomEntryRenderer.cs" />
+    <Compile Include="CustomEntryEnableRenderer.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="MessageAndroid.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
